language/move-lang/tests/move_check/liveness/dead_refs_branch_both_invalid.exp
error: 

    ┌── tests/move_check/liveness/dead_refs_branch_both_invalid.move:10:13 ───
    │
 10 │         _ = x;
    │             ^ Invalid copy of local 'x'
    ·
  4 │         let x_ref = &mut x;
    │                     ------ It is still being mutably borrowed by this reference
    │

error: 

    ┌── tests/move_check/liveness/dead_refs_branch_both_invalid.move:11:13 ───
    │
 11 │         _ = move x;
    │             ^^^^^^ Invalid move of local 'x'
    ·
  4 │         let x_ref = &mut x;
    │                     ------ It is still being mutably borrowed by this reference
    │

error: 

    ┌── tests/move_check/liveness/dead_refs_branch_both_invalid.move:23:13 ───
    │
 23 │         _ = x;
    │             ^ Invalid copy of local 'x'
    ·
 17 │         let x_ref = &mut x;
    │                     ------ It is still being mutably borrowed by this reference
    │

error: 

    ┌── tests/move_check/liveness/dead_refs_branch_both_invalid.move:24:13 ───
    │
 24 │         _ = move x;
    │             ^^^^^^ Invalid move of local 'x'
    ·
 17 │         let x_ref = &mut x;
    │                     ------ It is still being mutably borrowed by this reference
    │

